<resources>
    <string name="app_name">LEF.ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="belumPunyaAkun">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="terms">By creating account means you are agree into our <font color="#2555B7">Terms and Conditions</font></string>
    <string name="findYourFlight">FIND YOUR FLIGHT</string>
    <string name="Comfiest">Comfiest flight with the Cheapst Price</string>
    <string name="hi">Hi User,</string>
    <string name="where">Where are you flying to?</string>
    <string name="oneway">Oneway</string>
    <string name="roundTrip">Round Trip</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="del">DEL</string>
    <string name="jfk">JFK</string>
    <string name="new_delhi">New Delhi</string>
    <string name="new_york">New York City</string>
    <string name="date">Thu, 15 Oct</string>
    <string name="returnn">RETURN</string>
    <string name="travel_date">TRAVEL DATE</string>
    <string name="traveller">TRAVELLER</string>
    <string name="str_class">CLASS</string>
    <string name="txt_traveller">1 Adult</string>
    <string name="economy">Economy</string>
    <string name="show">Show direct flights only</string>
    <string name="dashboard">Dashboard</string>
    <string name="header">LEF.ID</string>
    <string name="flight">Flight</string>
    <string name="airport">Airport</string>
    <string name="transaction">Transaction</string>
    <string name="total_user">Total User</string>
    <string name="user">10</string>
    <string name="total_order">Total Order</string>
    <string name="order">15</string>
    <string name="new_user">New User</string>
    <string name="new_order">New Order</string>
    <string name="new_income">New Income</string>
    <string name="income">IDR 8.500.000</string>
    <string name="total_income">IDR 27.540.000</string>
    <string name="txt_total_income">Total Income</string>
    <string name="see_details">see details ...</string>
    <string name="popular_flight">Popular Flight</string>
    <string name="jakarta">Jakarta</string>
    <string name="jkt">(JKT)</string>
    <string name="termscondition"><![CDATA[*Terms & Condition]]></string>
    <string name="company">Company</string>
    <string name="airplane">Airplane</string>
    <string name="upload">Upload Image</string>
    <string name="company_name">Company Name</string>
    <string name="edit_image">Edit Image</string>
    <string name="airplane_name">Boeing 737-800</string>
    <string name="airplane_code">1212</string>
    <string name="txt_company_name">Lion Air</string>
    <string name="txt_airplane_name">Airplane Name</string>
    <string name="save">save</string>
    <string name="txt_airplane_code">Airplane Code</string>
    <string name="edit">Edit</string>
    <string name="airport_name">Bandara Soekarno Hatta</string>
    <string name="city">Jakarta</string>
    <string name="city_code">41333</string>
    <string name="txt_airport_name">Airport Name</string>
    <string name="txt_city">City</string>
    <string name="txt_city_code">City code</string>
    <string name="bisnis">Bisnis</string>
    <string name="departure_date">Departure Date</string>
    <string name="departure_hour">Hour</string>
    <string name="destination_date">Destination Date</string>
    <string name="destination_hour">Hour</string>
    <string name="kelas">Class</string>
    <string name="maskapai">Maskapai</string>
    <string name="add_airplane">New Airplane</string>
    <string name="add_airport">New Airport</string>
    <string name="add_company">New Company</string>
    <string name="add_flight">New Flight</string>
    <string name="edit_airplane">Edit Airplane</string>
    <string name="edit_airport">Edit Airport</string>
    <string name="edit_company">Edit Company</string>
    <string name="edit_flight">Edit Flight</string>
    <string name="price">Price</string>
    <string name="seat">Seat Number</string>
    <string name="capacity">Capacity</string>
    <string name="logout">Logout</string>
    <string name="flightFrom">Flight From</string>
    <string name="flightTo">Flight To</string>
    <string name="code">Ticket Code</string>
    <string name="new_flight">New Flight</string>
    <string name="total_flight">Total Flight</string>
    <string name="Success">Success</string>
    <string name="Pending">Pending</string>
    <string name="Canceled">Canceled</string>
    <string name="add_transaction">New Transaction</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="ticketCode">Ticket Code Go</string>
    <string name="tipe">Type</string>
    <string name="ticketCodeBack">Ticket Code Back</string>
    <string name="nik">NIK</string>
    <string name="birthday">Birthday</string>
    <string name="total_airport">Total Airport</string>
    <string name="see_airport">See Airport</string>
    <string name="total_airplane">Total Airplane</string>
    <string name="see_airplane">See Airplane</string>
    <string name="total_company">Total Company</string>
    <string name="see_company">See Company</string>
    <string name="total_ticket">Total Ticket</string>
    <string name="see_ticket">See Ticket</string>
    <string name="total_payment">Total Payment</string>
    <string name="see_payment">See Payment</string>
    <string name="total_transaction">Total Transaction</string>
    <string name="see_transaction">See Transaction</string>
    <string name="explore">Let\'s Explore!</string>
    <string name="profile">Profile</string>
    <string name="username_profile">Username</string>
    <string name="firstName">Firstname</string>
    <string name="lastName">lastname</string>
    <string name="address_profile">Address</string>
    <string name="no_hp_profile">no hp</string>
    <string name="select_image">Select Image</string>
    <string name="update">Update</string>
    <string name="create_airplane">Create Airplane</string>
    <string name="create_airport">Create Airport</string>
    <string name="create_company">Create Company</string>
    <string name="create_flight">Create Flight</string>
    <string name="add_ticket">New Ticket</string>
    <string name="create_ticket">Create Ticket</string>
    <string-array name="kelas">
        <item name="eksekutif">Eksekutif</item>
        <item name="bisnis">Bisnis</item>
        <item name="ekonomi">Ekonomi</item>
    </string-array>
    <string-array name="tipe">
        <item name="oneway">Oneway</item>
        <item name="roundtrip">Round trip</item>
    </string-array>
</resources>