<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/dashboard"
            android:checked="true" />

        <item
            android:id="@+id/profile"
            android:enabled="true"
            android:icon="@drawable/person"
            android:title="@string/profile"
            android:visible="true"
            app:showAsAction="never"/>

        <item
            android:id="@+id/logout"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logout"
            android:visible="true"
            app:showAsAction="never"/>
    </group>

</menu>