<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".ui.SplashScreenFragment"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            app:srcCompat="@drawable/logo_splashscreen" />

        <TextView
            android:id="@+id/findYourFlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="150dp"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:text="@string/findYourFlight"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/comfiest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:text="@string/Comfiest"
            android:textColor="#80FFFFFF" />

        <ImageButton
            android:id="@+id/btnRegister"
            style="@style/Widget.MyApp.Button"
            android:src="@drawable/button_splashscreen"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="15dp"
            app:cornerRadius="18dp" />
    </LinearLayout>

</FrameLayout>