<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.EditProfileFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewProfile"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:outlineProvider="none"
            app:cardBackgroundColor="@color/birutua"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/TextAppearance.MyApp.detail.text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/profile" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:src="@drawable/ic_baseline_supervised_user_circle_24" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etFirstName"
                        style="@style/TextAppearance.MyApp.detail.text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/firstName" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:src="@drawable/ic_baseline_supervised_user_circle_24" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLastName"
                        style="@style/TextAppearance.MyApp.detail.text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/lastName" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:src="@drawable/ic_baseline_home_work_24"
                        app:tint="@color/white" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAddress"
                        style="@style/TextAppearance.MyApp.detail.text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/address_profile" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:src="@drawable/ic_baseline_phone_24" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPhone"
                        style="@style/TextAppearance.MyApp.detail.text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/no_hp_profile" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/ivEditImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    tools:src="@tools:sample/avatars" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSelectImage"
                    style="@style/Widget.MyApp.Button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/select_image"
                    app:backgroundTint="#2A3259"
                    app:cornerRadius="20dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUpdate"
                    style="@style/Widget.MyApp.Button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/update"
                    app:backgroundTint="#2A3259"
                    app:cornerRadius="20dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</ScrollView>