<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="120dp">

                    <TextView
                        android:id="@+id/airport"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/airport_name"
                        android:textSize="15sp"
                        android:textAppearance="@style/TextAppearance.MyApp.Text" />

                    <TextView
                        android:id="@+id/city"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:textSize="15sp"
                        android:textAppearance="@style/TextAppearance.MyApp.Text" />

                    <TextView
                        android:id="@+id/city_code"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city_code"
                        android:textSize="15sp"
                        android:textAppearance="@style/TextAppearance.MyApp.Text" />

                </LinearLayout>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </FrameLayout>
</layout>