<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.airport.AddAirportFragment"
    android:background="@drawable/bg_light"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
                android:fitsSystemWindows="true">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:title="@string/add_airport"
                    style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
                    android:background="@android:color/transparent"
                    android:elevation="0dp" />

            </com.google.android.material.appbar.AppBarLayout>

            <!-- Screen content -->
            <!-- Use app:layout_behavior="@string/appbar_scrolling_view_behavior" to fit below top app bar -->

            <LinearLayout
                android:layout_marginTop="50dp"
                android:padding="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/txt_airport_name"
                    app:boxBackgroundColor="@color/white"
                    android:textColorHint="@color/black"
                    style="@style/Widget.MyApp.TextInputLayout2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_airport"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHint="#FFFFFF"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/txt_city"
                    app:boxBackgroundColor="@color/white"
                    android:textColorHint="@color/black"
                    style="@style/Widget.MyApp.TextInputLayout2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_city"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHint="#FFFFFF"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/txt_city_code"
                    app:boxBackgroundColor="@color/white"
                    android:textColorHint="@color/black"
                    style="@style/Widget.MyApp.TextInputLayout2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_city_code"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHint="#FFFFFF"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:text="@string/save"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    app:cornerRadius="15dp"
                    android:fontFamily="@font/khula_bold"
                    android:backgroundTint="@color/basic"
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp" />

            </LinearLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>


    </androidx.drawerlayout.widget.DrawerLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>